--- a/app/assets/stylesheets/attestation_template_2_edit.scss
+++ b/app/assets/stylesheets/attestation_template_2_edit.scss
@@ -49,8 +49,8 @@
     }
 
     h3 {
-      font-size: 1.15rem;
-      font-weight: normal;
+      font-size: 1rem; // same as text
+      font-weight: bold;
       line-height: 1rem;
     }
 
